# FinFixer

./: .pre-commit-config.yaml  Makefile  README.md  example.py  pyproject.toml
src/core/: __init__.py
src/core/schemas/: __init__.py  assets_gallery.schema.json  business_overview.schema.json  container.schema.json  financials.schema.json  legal_cases.schema.json  legal_structure.schema.json  news.schema.json
tests/: test_example.py  test_schemas_valid.py
