[build-system]
requires = ["setuptools>=67.6"]
build-backend = "setuptools.build_meta"

[project]
name = "finfixer"
version = "0.1.0"
description = "FinFixer project"
readme = "README.md"
authors = [{name = "Example", email = "example@example.com"}]
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "jsonschema",
    "jinja2",
    "pandas",
    "python-dateutil",
    "pdfplumber",
    "pytesseract",
    "opencv-python",
    "requests",
    "tenacity",
    "networkx",
    "orjson",
    "pytest",
    "ruff",
    "black",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

