[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "company-report"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "jsonschema",
    "jinja2",
    "pandas",
    "python-dateutil",
    "pdfplumber",
    "pytesseract",
    "opencv-python",
    "requests",
    "tenacity",
    "networkx",
    "orjson",
    "pytest",
    "ruff",
    "black",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
  "core",
  "core.schemas",
]

include-package-data = true

[tool.setuptools.package-data]
"core.schemas" = ["*.schema.json"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
